# zcsai

./: .dockerignore  .env.production.example  .gitignore  DEPLOY.md  Dockerfile  PromptBuilder.py  RuleEngine.py  UtilLLM.py  UtilMem.py  UtilRAG.py  UtilVector.py  check_models.md  check_models.py  check_models_prod.py  check_models_prod_test.py  config.py  database.py  database.sql  deps.py  docker-compose.local.yml  docker-compose.yml  glbclient.py  main.py  memory_service.py  models.md  models.py  prod.md  pyproject.toml  region-language-local.json  region-language.json  router_admin.py  router_auth.py  router_kb.py  router_material.py  router_upload.py  run-backend.sh  stage 发生变化的情况.txt  stages.json  stage的解释.txt  知识库瓶颈-未修改.md  (+2 more)
.claude/: settings.local.json
frontend/: .env.local  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
migrations/: 001_users.sql  002_session_stage_default.sql  003_stage_keys_to_english.sql  004_session_emotion_and_takeover.sql  005_stage_keys_refactor.sql  006_rules_engine_and_takeover_audit.sql  007_drop_unique_session_rule_fires.sql  008_visitor_profile.sql  009_message_source_ts.sql  010_platform_type_to_varchar.sql  011_materials_and_media.sql  012_knowledge_base_raw_text.sql
scripts/: compose-local.sh  run-dqrant.sh
test.html/: test.html  test2-vps-girl.html  test2-vps-girl_hk-2.html  test2-vps-girl_hk.html  test2-vps.html  test2-vps2.html  test2-vps3.html  test2-vps4.html  test2.html
test_rag/: mount.json  rag1.json  rag2.json  rag3.json  test_append_rag.py  test_crt_rag.py  (+1 more)
(+52 files in other folders)
