[project]
name = "zcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "greenlet>=3.5.0",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "mem0ai>=2.0.2",
    "openai>=2.36.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
